--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
 <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title> Mi primer pagina web </title>
+       <title> Sherman Seguridad S.A. </title>
 </head>
 
 <body>
-       <h1> Mi primer página Web </h1>
-       <h2> Mi primer página Web </h2>
-       .
-       .
-       .
-       <h6> Mi primer página Web </h6>
-       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi culpa deleniti fuga libero laudantium
-              voluptatibus sed, autem impedit saepe aspernatur sunt, ipsam doloremque praesentium vitae. Omnis incidunt
-              deleniti dolores totam! </p>
-       <img src="Inspector.png" alt="Gatito" width="200px">
+       <h1> Sherman Seguridad S.A. </h1>
+       <h2> Seguridad privada </h2>
+       <h3> Habilitados en toda la provincia de Buenos Aires, Santa Fe, C.A.B.A. </h3>
+       <p>Somos una empresa de seguridad destinada a la protección de bienes y personas las 24 horas de los 365 días del año,
+              con una flota de vehículos y más de 50 empleados enfocados en resguardar su forma de vida. <br>
+              Nos encontramos habilitados en Buenos Aires, Santa Fe, Ciudad Autónoma de Buenos Aires, y todos los puertos del
+              país.<br>
+              A su vez desarrollamos custodias de mercadería en tránsito. </p>
+       <img src="Sherman.jpg" alt="Logo de la empresa" width="200px">
+       <br> <br> <br>
+
+       <ul>
+              <li>Contacto</li>
+              <li><a href="tablas.html" target="_blank">Horarios de atención</a></li>
+              <li>Historia</li>
+              <li>Servicios</li>
+       </ul>
+
 </body>
 
 </html>
