--- a/tablas.html
+++ b/tablas.html
@@ -3,35 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Horarios de atención</title>
 </head>
-    <h1>Horarios de atención</h1>
+    <h1>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Horarios de atención</h1>
 <body>
-    <table border="1">
+    <table style="width: 40%;" ;  border="1">
         <tr>
-            <td>Lunes</td>
-            <td rowspan="5">8 a 13 horas</td>
+            <td><b>Lunes</b></td>
+            <td rowspan="5" class="horas"><i>8 a 13 horas</i></td>
         </tr>
         <tr>
-            <td>Martes</td>
+            <td><b>Martes</b></td>
         </tr>
         <tr>
-            <td>Miercoles</td>
+            <td><b>Miercoles</b></td>
         </tr>
         <tr>
-            <td>Jueves</td>
+            <td><b>Jueves</b></td>
         </tr>
         <tr>
-            <td>Viernes</td>
+            <td><b>Viernes</b></td>
         </tr>
-        <tr>
-            <td>Sábado</td>
-            <td rowspan="2">Oficinas cerradas</td>
+        <tr class="finde">
+            <td><b>Sábado</b></td>
+            <td rowspan="2" class="horas"><i>Oficinas cerradas</i></td>
         </tr>
-        <tr>
+        <tr class="finde">
             <td>Domingo</td>
         </tr>
             
     </table>
 </body>
+</html>
 </html>
