--- a/tablas.html
+++ b/tablas.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Horarios de atención</title>
 </head>
-    <h1>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Horarios de atención</h1>
+    <h1 id="titulo">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Horarios de atención</h1>
 <body>
     <table style="width: 40%;" ;  border="1">
         <tr>
