--- a/tablas.html
+++ b/tablas.html
@@ -30,7 +30,7 @@
             <td rowspan="2" class="horas"><i>Oficinas cerradas</i></td>
         </tr>
         <tr class="finde">
-            <td>Domingo</td>
+            <td><b>Domingo</b></td>
         </tr>
             
     </table>
