--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title> Sherman Seguridad S.A. </title>
+       <link rel="stylesheet" href="style.css">
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-     <header>
+     <header class="headeruno">
 
        <h1> Sherman Seguridad S.A. </h1>
        <h2> Seguridad privada </h2>
        <h3> Habilitados en toda la provincia de Buenos Aires, Santa Fe, C.A.B.A. </h3>
-
-       <img src="Sherman.jpg" alt="Logo de la empresa" width="200px">
        
        <nav>
-              <ul>
+              <ul class="navuno">
                      <li><a href="contacto.html"target="_blank">Contacto</a></li>
-                     <li><a href="tablas.html" target="_blank">Horarios de atención</a></li>
+                      <li><a href="tablas.html" target="_blank">Horarios de atención</a></li>
                      <li>Historia</li>
                      <li>Servicios</li>
                </ul>
@@ -28,8 +31,10 @@
 
        </header>
 
-       <main>
+       <main class="mainuno">
               <section>
+                     <img src="Sherman.jpg" alt="Logo de la empresa" width="200px">
+       
                       <p>Somos una empresa de seguridad destinada a la protección de bienes y personas las 24 horas de los 365 días del año,
                      con una flota de vehículos y más de 50 empleados enfocados en resguardar su forma de vida.<br>
                      Nos encontramos habilitados en Buenos Aires, Santa Fe, Ciudad Autónoma de Buenos Aires, y todos los puertos del
@@ -44,9 +49,13 @@
        <br>
        <br>
 
-       <footer>
+       <footer class="footeruno">
               <p>Página diseñada por Santiago Olivera</p>
        </footer>
+
+</body>
+
+</html>
 
 </body>
 
