--- a/contacto.html
+++ b/contacto.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <form action="">
+    <form action="" class="formuno">
         Nombre: <br> <input type="text" name="Nombre" maxlength="30"> <br> <br>
         Apellido: <br> <input type="text" name="Apellido" maxlength="30"> <br> <br>
         Correo Electrónico: <br><input type="text" name="Correo" maxlength="30"> <br> <br>
