--- a/tablas.html
+++ b/tablas.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css">
     <title>Horarios de atención</title>
 </head>
-    <h1 id="titulo">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Horarios de atención</h1>
+    <h1 id="titulo">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Horarios de atención</h1> 
 <body>
-    <table style="width: 40%;" ;  border="1">
+    <table style="width: 40%;"; border="1">
         <tr>
-            <td><b>Lunes</b></td>
+            <td><b>Lunes</b></td>  
             <td rowspan="5" class="horas"><i>8 a 13 horas</i></td>
         </tr>
         <tr>
@@ -33,6 +33,9 @@
             <td><b>Domingo</b></td>
         </tr>
             
+    </table>
+</body>
+</html>
     </table>
 </body>
 </html>
