--- a/contacto.html
+++ b/contacto.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <form action="" class="formuno">
-        Nombre: <br> <input type="text" name="Nombre" maxlength="30"> <br> <br>
-        Apellido: <br> <input type="text" name="Apellido" maxlength="30"> <br> <br>
-        Correo Electrónico: <br><input type="text" name="Correo" maxlength="30"> <br> <br>
-        Indique sexo: <br> 
-        Masculino: <input type="radio" name="sexo">  <br>    
-        Femenino:  <input type="radio" name="sexo">  <br>
-        Otro:      <input type="radio" name="sexo">  <br> <br>
-        Si desea realizar un comentario: <br> <br> <textarea cols="40" rows="10"></textarea>
+        <span>Nombre:</span>  <br> <input type="text" name="Nombre" maxlength="30"> <br> <br>
+        <span>Apellido:</span><br> <input type="text" name="Apellido" maxlength="30"> <br> <br>
+        <span>Correo Electrónico:</span><br><input type="text" name="Correo" maxlength="30"> <br> <br>
+        <span>Indique sexo:</span> <br> 
+        <span>Masculino:</span><input type="radio" name="sexo">  <br>    
+        <span>Femenino:</span> <input type="radio" name="sexo">  <br>
+        <span>Otro:     </span><input type="radio" name="sexo">  <br> <br>
+        <span> Si desea realizar un comentario:</span> <br> <br> <textarea cols="40" rows="10"></textarea>
         <br> <br> <br>
         <input type="submit" value="Enviar">
     </form>
