--- a/contacto.html
+++ b/contacto.html
@@ -9,16 +9,26 @@
 </head>
 <body>
     <form action="" class="formuno">
-        <span>Nombre:</span>  <br> <input type="text" name="Nombre" maxlength="30"> <br> <br>
-        <span>Apellido:</span><br> <input type="text" name="Apellido" maxlength="30"> <br> <br>
-        <span>Correo Electrónico:</span><br><input type="text" name="Correo" maxlength="30"> <br> <br>
+        <label for="nombre">Nombre:</label>  <br> 
+        <input type="text" name="Nombre" maxlength="30"> <br> <br>
+
+        <label for="apellido">Apellido:</label><br> 
+        <input type="text" name="Apellido" maxlength="30"> <br> <br>
+
+        <label for="correo electronico">Correo electrónico:</label>
+        <br><input type="text" name="Correo" maxlength="30"> <br> <br>
+
         <span>Indique sexo:</span> <br> 
         <span>Masculino:</span><input type="radio" name="sexo">  <br>    
         <span>Femenino:</span> <input type="radio" name="sexo">  <br>
         <span>Otro:     </span><input type="radio" name="sexo">  <br> <br>
-        <span> Si desea realizar un comentario:</span> <br> <br> <textarea cols="40" rows="10"></textarea>
+
+        <h4>Si desea realizar un comentario:</h4>  
+        <textarea name="" id="" cols="40" rows="10"></textarea>
         <br> <br> <br>
+
         <input type="submit" value="Enviar">
+
     </form>
 </body>
 </html>
