--- a/contacto.html
+++ b/contacto.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
+
 <body>
     <form action="" class="formuno">
-        <label for="nombre">Nombre:</label>  <br> 
-        <input type="text" name="Nombre" maxlength="30"> <br> <br>
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Nombre:</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" style="width: 60%;"  maxlength="30">
+          </div>
 
-        <label for="apellido">Apellido:</label><br> 
-        <input type="text" name="Apellido" maxlength="30"> <br> <br>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Apellido:</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" style="width: 60%;"  maxlength="30" >
+          </div>
 
-        <label for="correo electronico">Correo electrónico:</label>
-        <br><input type="text" name="Correo" maxlength="30"> <br> <br>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Correo electronico:</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" style="width: 60%;" maxlength="30">
+          </div>
 
-        <span>Indique sexo:</span> <br> 
-        <span>Masculino:</span><input type="radio" name="sexo">  <br>    
-        <span>Femenino:</span> <input type="radio" name="sexo">  <br>
-        <span>Otro:     </span><input type="radio" name="sexo">  <br> <br>
+        <div class="mb-3">
+            <label for="disabledSelect" class="form-label" >Sexo:</label>
+            <select id="disabledSelect" class="form-select" style="width: 40%;">
+              <option>Seleccione</option>
+              <option>Masculino</option>
+              <option>Femenino</option>
+              <option>Otro</option>
+            </select>
+          </div>
 
-        <h4>Si desea realizar un comentario:</h4>  
-        <textarea name="" id="" cols="40" rows="10"></textarea>
-        <br> <br> <br>
-
-        <input type="submit" value="Enviar">
+        <p>Si desea realizar una sugerencia:</p>
+        <textarea name="" id="" cols="40" rows="10" style="border-radius: 10px;"></textarea> <br> <br>
+    
+        <input class="btn btn-primary" type="submit" value="Submit">
 
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
