--- a/contacto.html
+++ b/contacto.html
@@ -10,28 +10,28 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
+<body class="contacto">
 
-<body>
     <form action="" class="formuno">
         <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Nombre:</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" style="width: 60%;"  maxlength="30">
+            <label for="Nombre" class="form-label">Nombre:</label>
+            <input type="text" class="form-control" style="width: 60%;"  maxlength="30">
           </div>
 
           <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Apellido:</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" style="width: 60%;"  maxlength="30" >
+            <label for="Apellido" class="form-label">Apellido:</label>
+            <input type="text" class="form-control" style="width: 60%;"  maxlength="30" >
           </div>
 
           <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Correo electronico:</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" style="width: 60%;" maxlength="30">
+            <label for="Email" class="form-label">Correo electronico:</label>
+            <input type="email" class="form-control" style="width: 60%;" maxlength="30">
           </div>
 
         <div class="mb-3">
-            <label for="disabledSelect" class="form-label" >Sexo:</label>
-            <select id="disabledSelect" class="form-select" style="width: 40%;">
-              <option>Seleccione</option>
+            <label for="sexo" class="form-label" >Sexo:</label>
+            <select id="sexo" class="form-select" style="width: 40%;">
+              <option selected disabled>-</option>
               <option>Masculino</option>
               <option>Femenino</option>
               <option>Otro</option>
@@ -41,12 +41,13 @@
         <p>Si desea realizar una sugerencia:</p>
         <textarea name="" id="" cols="40" rows="10" style="border-radius: 10px;"></textarea> <br> <br>
     
-        <input class="btn btn-primary" type="submit" value="Submit">
+        <input class="btn btn-primary" type="submit" value="Enviar">
 
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        
 </body>
 
 </html>
