--- a/tablas.html
+++ b/tablas.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="tablas">
-    <h1 id="titulo"> &nbsp; &nbsp; Horarios de atención</h1> 
+    <h1 id="titulo">Horarios de atención</h1> 
     
     <table class="horarios"  ; border="1">
         <tr>
