--- a/tablas.html
+++ b/tablas.html
@@ -9,33 +9,38 @@
 </head>
 
 <body class="tablas">
-    <h1 id="titulo">Horarios de atención</h1> 
-    
-    <table class="horarios"  ; border="1">
+    <h1 id="titulo"> Horarios de atención</h1>
+
+    <table class="horarios">
         <tr>
-            <td><b>Lunes</b></td>  
-            <td rowspan="5" class="horas"><i>8 a 13 horas</i></td>
+            <td class="negrita">Lunes</td>
+            <td rowspan="5" class="horas">8 a 13 horas</td>
         </tr>
         <tr>
-            <td><b>Martes</b></td>
+            <td class="negrita">Martes</td>
         </tr>
         <tr>
-            <td><b>Miercoles</b></td>
+            <td class="negrita">Miercoles</td>
         </tr>
         <tr>
-            <td><b>Jueves</b></td>
+            <td class="negrita">Jueves</td>
         </tr>
         <tr>
-            <td><b>Viernes</b></td>
+            <td class="negrita">Viernes</td>
         </tr>
         <tr class="finde">
-            <td><b>Sábado</b></td>
-            <td rowspan="2" class="horas"><i>Oficinas cerradas</i></td>
+            <td class="negrita">Sábado</td>
+            <td rowspan="2" class="horas">Oficinas cerradas</td>
         </tr>
         <tr class="finde">
-            <td><b>Domingo</b></td>
+            <td class="negrita">Domingo</td>
         </tr>
-            
+
     </table>
+
+    <section class="regreso">
+        <a href="index.html" class="linkuno" >Regresar A Página Principal</a>
+    </section>
 </body>
+
 </html>
