--- a/contacto.html
+++ b/contacto.html
@@ -2,52 +2,59 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contacto</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
+
 <body class="contacto">
 
-    <form action="" class="formuno">
-        <div class="mb-3">
-            <label for="Nombre" class="form-label">Nombre:</label>
-            <input type="text" class="form-control" style="width: 60%;"  maxlength="30">
-          </div>
+  <form action="" class="formuno">
+    <div class="mb-3">
+      <label for="Nombre" class="form-label">Nombre:</label>
+      <input type="text" class="form-control" style="width: 60%;" maxlength="30">
+    </div>
 
-          <div class="mb-3">
-            <label for="Apellido" class="form-label">Apellido:</label>
-            <input type="text" class="form-control" style="width: 60%;"  maxlength="30" >
-          </div>
+    <div class="mb-3">
+      <label for="Apellido" class="form-label">Apellido:</label>
+      <input type="text" class="form-control" style="width: 60%;" maxlength="30">
+    </div>
 
-          <div class="mb-3">
-            <label for="Email" class="form-label">Correo electronico:</label>
-            <input type="email" class="form-control" style="width: 60%;" maxlength="30">
-          </div>
+    <div class="mb-3">
+      <label for="Email" class="form-label">Correo electronico:</label>
+      <input type="email" class="form-control" style="width: 60%;" maxlength="30">
+    </div>
 
-        <div class="mb-3">
-            <label for="sexo" class="form-label" >Sexo:</label>
-            <select id="sexo" class="form-select" style="width: 40%;">
-              <option selected disabled>-</option>
-              <option>Masculino</option>
-              <option>Femenino</option>
-              <option>Otro</option>
-            </select>
-          </div>
+    <div class="mb-3">
+      <label for="sexo" class="form-label">Sexo:</label>
+      <select id="sexo" class="form-select" style="width: 40%;">
+        <option selected disabled>-</option>
+        <option>Masculino</option>
+        <option>Femenino</option>
+        <option>Otro</option>
+      </select>
+    </div>
 
-        <p>Si desea realizar una sugerencia:</p>
-        <textarea name="" id="" cols="40" rows="10" style="border-radius: 10px;"></textarea> <br> <br>
-    
-        <input class="btn btn-primary" type="submit" value="Enviar">
+    <p>Si desea realizar una sugerencia:</p>
+    <textarea name="" id="" cols="40" rows="10" style="border-radius: 10px;"></textarea> <br> <br>
 
-    </form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-        
+    <input class="btn btn-primary" type="submit" value="Enviar">
+    <section class="botoncontacto">
+      <a href="index.html" class="regresocontacto">Regresar A Página Principal</a>
+    </section>
+
+
+
+
+  </form>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
